--- a/.gitignore
+++ b/.gitignore
@@ -240,3 +240,13 @@ FakesAssemblies/
 *.opt
 z80.Tests/z80.Tests.v2.ncrunchproject
 z80.v2.ncrunchsolution
+
+# Added by Swift Package Manager
+/.build
+/Packages
+/*.xcodeproj
+xcuserdata/
+DerivedData/
+.swiftpm/config/registries.json
+.swiftpm/xcode/package.xcworkspace/contents.xcworkspacedata
+.netrc
